<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home -->
    <item
        android:id="@+id/menuBottomNavigationView_item_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/bottomNavigationView_itemHome_title" />

    <!-- Bookmarks -->
    <item
        android:id="@+id/menuBottomNavigationView_item_bookmarks"
        android:icon="@drawable/ic_bookmark_white_24dp"
        android:title="@string/bottomNavigationView_itemBookmarks_title" />

    <!-- Notifications -->
    <item
        android:id="@+id/menuBottomNavigationView_item_notifications"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/bottomNavigationView_itemNotifications_title" />

</menu>